# stayt-stack

./: .env  .gitignore  Cargo.toml  README.md  Trunk.toml  cargo-generate.toml  index.html  tailwind.css
db/: database.db
migrations/: 20250919003830_users.up.sql
{{project-name}}-backend/: Cargo.toml  Cargo.toml.liquid
{{project-name}}-backend/src/: main.rs  util.rs
{{project-name}}-backend/src/api/: mod.rs  register.rs.liquid  token.rs  token.rs.liquid  user.rs  user.rs.liquid
{{project-name}}-backend/src/db/: user.rs  user.rs.liquid
{{project-name}}-frontend/: Cargo.toml  Cargo.toml.liquid
{{project-name}}-frontend/src/: main.rs  util.rs
{{project-name}}-frontend/src/components/: button.rs  mod.rs  modal.rs  navbar.rs.liquid  token_provider.rs
{{project-name}}-frontend/src/components/nav/: mod.rs  nav_bar.rs  nav_link.rs
{{project-name}}-frontend/src/pages/: login.rs  logout.rs  mod.rs  register.rs  root.rs
{{project-name}}-lib/: Cargo.toml
{{project-name}}-lib/src/: lib.rs
