[package]
name = "{{project-name}}-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.31"
base64 = "0.22.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
gloo = "0.11.0"
jwt = { workspace = true }
"{{project-name}}-lib" = { path = "../{{project-name}}-lib" }
serde = { workspace = true }
serde_json = "1.0.143"
serde_plain = "1.0.2"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["console", "HtmlFormElement", "HtmlDivElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
